# htask

./: .design  .drone.yml  .env.example  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  .tasks  Cargo.toml  ChangeLog.md  Dockerfile  README.md  cabal.project  cabal.project.freeze  dependency-graph.sh  drone.yml  go.mod  go.sum  hie.yaml  htask.cabal  justfile  mkDepGraph.sh  stack.yaml  tasks.txt
app/: Main.hs
cmd/htask/: main.go
docs/: ARCHITECTURE.md  STATE_MACHINE.md
internal/cli/: output.go
internal/core/: api.go  domain.go
internal/events/: file.go
scripts/: draw-dependency-graph  mkDepGraph.sh  test-cli.sh
src/: domain.rs  lib.rs  main.rs  store.rs
src/HTask/: Core.hs  Effects.hs  Events.hs  Events.hs.tmp  Provider.hs
src/HTask/CLI/: Actions.hs  App.hs  Options.hs  Options.hs.tmp  Output.hs  Runners.hs
src/HTask/CLI/Output/: Document.hs
src/HTask/Core/: API.hs  Domain.hs  Replay.hs  Task.hs  TaskEvent.hs
src/HTask/Events/Backends/: File.hs  Memory.hs
test/: Main.hs
test/HTask/: EffectsSpec.hs
test/HTask/CLI/: CLISpec.hs  TestApp.hs
test/HTask/CLI/golden/: summary_empty.golden  summary_with_tasks.golden  summary_with_tasks_json.golden
test/HTask/Core/: Add.hs  Complete.hs  List.hs  Remove.hs  Start.hs  StateSpec.hs  Stop.hs  TestApp.hs
test/HTask/Events/: CoreSpec.hs  FileSpec.hs  MemorySpec.hs
test/HTask/Provider/: Clear.hs  Random.hs  Static.hs  TimedCache.hs
tests/: integration_test.rs
