cabal-version: 1.12
name:           htask
version:        0.2.0.0
author:         Jack Palfrey
maintainer:     jack.palf@gmail.com
copyright:      2020 LeadPixel
license:        BSD3
build-type:     Simple

library
  exposed-modules:
      HTask.CLI.Actions
      HTask.CLI.App
      HTask.CLI.Options
      HTask.CLI.Output
      HTask.CLI.Runners
      HTask.Core
      HTask.Core.API
      HTask.Core.Domain
      HTask.Events
      HTask.Provider
  other-modules:
      Paths_htask
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      MonadRandom
    , aeson
    , base >=4.7 && <5
    , bytestring
    , conduit
    , containers
    , mtl
    , optparse-applicative
    , tagged
    , text
    , time
    , transformers
    , unliftio-core
    , uuid
  default-language: GHC2021

executable htask
  main-is: Main.hs
  other-modules:
      Paths_htask
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , htask
  default-language: GHC2021

test-suite htask-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      HTask.CLI.CLISpec
      HTask.CLI.TestApp
      HTask.Core.Add
      HTask.Core.Complete
      HTask.Core.List
      HTask.Core.Remove
      HTask.Core.Start
      HTask.Core.Stop
      HTask.Core.TestApp
      HTask.Events.CoreSpec
      HTask.Events.FileSpec
      HTask.Events.MemorySpec
      HTask.Provider.Clear
      HTask.Provider.Random
      HTask.Provider.Static
      HTask.Provider.TimedCache
      Paths_htask
  hs-source-dirs:
      test
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      MonadRandom
    , QuickCheck
    , aeson
    , base >=4.7 && <5
    , bytestring
    , conduit
    , containers
    , directory
    , htask
    , mtl
    , process
    , quickcheck-instances
    , random
    , tagged
    , tasty
    , tasty-golden
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time
    , transformers
    , unliftio-core
    , uuid
  default-language: GHC2021
